Fix big shift bug finally + event handling improving

--- a/css.css
+++ b/css.css
@@ -35,3 +35,6 @@ body {
     font-size: 0.75em;
     text-align: center;
 }
+.moving {
+    cursor: move;
+}
